# f1-picks-2025-predictor

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
data/: .gitignore
data/backtest/: backtest_2025.json  backtest_2025.md
data/fastf1/metadata/: drivers.parquet  events.parquet  teams.parquet
data/fastf1/sessions/: 2020_01_FP1.parquet  2020_01_FP2.parquet  2020_01_FP3.parquet  2020_01_Q.parquet  2020_01_R.parquet  2020_02_FP1.parquet  2020_02_FP2.parquet  2020_02_Q.parquet  (+394 more)
docs/: journey.md  technical-reference.md
inference/php/: Dockerfile  README.md  predict.php
src/: config.py
src/cli/: backtest.py  evaluate.py  export_features.py  export_onnx.py  predict.py  retrain.py  tune_hyperparams.py
src/data/: fastf1_sync.py  loaders.py
src/evaluation/: explanation.py  ranking_metrics.py  scoring.py
src/features/: base_pipeline.py  circuit_features.py  circuit_overtaking_features.py  driver_circuit_features.py  elo_features.py  first_lap_features.py  grid_features.py  imputation.py  momentum_features.py  practice_features.py  qualifying_features.py  qualifying_pipeline.py  race_pace_features.py  race_pipeline.py  relative_features.py  reliability_features.py  sector_features.py  selection.py  sprint_features.py  sprint_quali_pipeline.py  sprint_race_pipeline.py  track_evolution_features.py  tyre_features.py  weather_features.py  wet_weather_skill_features.py
src/models/: base_ranker.py  baselines.py  qualifying.py  race.py  sprint_qualifying.py  sprint_race.py
tests/unit/: test_fastf1_features.py  test_scoring.py  test_temporal_constraints.py  test_temporal_leakage.py
